--- a/models/triple-classification/codex-s/rescal/config.yaml
+++ b/models/triple-classification/codex-s/rescal/config.yaml
@@ -1,5 +1,3 @@
-KvsAll:
-  label_smoothing: 0.0949656805023551
 dataset:
   name: codex-s/
   num_entities: 2034
@@ -9,52 +7,49 @@ eval:
   metrics_per:
     relation_type: true
 import:
-- reciprocal_relations_model
 - rescal
+- reciprocal_relations_model
 lookup_embedder:
   dim: 512
-  initialize: xavier_normal_
   initialize_args:
     normal_:
       mean: 0.0
-      std: 0.021610635731883543
+      std: 0.062295284631451356
     uniform_:
-      a: -0.013633629432106331
+      a: -0.38031199924956216
     xavier_normal_:
       gain: 1.0
     xavier_uniform_:
       gain: 1.0
   regularize_args:
-    p: 1
-    weighted: true
-model: reciprocal_relations_model
+    p: 3
+model: rescal
 negative_sampling:
   implementation: batch
 reciprocal_relations_model:
   base_model:
-    relation_embedder:
-      dim: 262144
     type: rescal
 rescal:
   entity_embedder:
-    dropout: 0.1895404765382409
-    regularize_weight: 3.472500235451897e-15
+    dropout: -0.3413133669530714
+    regularize_weight: 2.1762953978996858e-10
   relation_embedder:
-    dropout: -0.48818968143314123
-    regularize_weight: 3.43367368126083e-14
+    dropout: 0.08043721750197197
+    regularize_weight: 3.3700569662918854e-14
 train:
   auto_correct: true
-  batch_size: 256
+  batch_size: 128
   loss_arg: .nan
   lr_scheduler: ReduceLROnPlateau
   lr_scheduler_args:
     factor: 0.95
     mode: max
-    patience: 1
+    patience: 7
     threshold: 0.0001
   max_epochs: 400
   optimizer_args:
-    lr: 0.014472014395960959
+    lr: 0.04523284126361179
+  type: 1vsAll
 valid:
   early_stopping:
     min_threshold:
