--- a/models/triple-classification/codex-s/complex/config.yaml
+++ b/models/triple-classification/codex-s/complex/config.yaml
@@ -1,12 +1,10 @@
-KvsAll:
-  label_smoothing: 0.20810008104890582
 complex:
   entity_embedder:
-    dropout: 0.11962679587304592
-    regularize_weight: 1.3433574450729754e-10
+    dropout: 0.07931799348443747
+    regularize_weight: 9.584175626202284e-13
   relation_embedder:
-    dropout: 0.3601722866296768
-    regularize_weight: 6.381048703764224e-16
+    dropout: 0.05643956921994686
+    regularize_weight: 0.022858621200283015
 dataset:
   name: codex-s/
   num_entities: 2034
@@ -20,19 +18,19 @@ import:
 - complex
 lookup_embedder:
   dim: 512
-  initialize: uniform_
+  initialize: xavier_normal_
   initialize_args:
     normal_:
       mean: 0.0
-      std: 0.3343168078763725
+      std: 0.0003706650808601012
     uniform_:
-      a: -0.8133271684910264
+      a: -0.2092997908254619
     xavier_normal_:
       gain: 1.0
     xavier_uniform_:
       gain: 1.0
+  regularize: ''
   regularize_args:
-    p: 3
     weighted: true
 model: reciprocal_relations_model
 negative_sampling:
@@ -48,11 +46,13 @@ train:
   lr_scheduler_args:
     factor: 0.95
     mode: max
-    patience: 6
+    patience: 7
     threshold: 0.0001
   max_epochs: 400
+  optimizer: Adam
   optimizer_args:
-    lr: 0.25574629308999747
+    lr: 0.00033858206813454155
+  type: 1vsAll
 valid:
   early_stopping:
     min_threshold:
